@@ -174,4 +174,5 @@ BUGFIXES:
 157 ==> 391835 - Deleted pictures still appear in group.
 158 ==> 387483 - Elegant theme: Selected frame colors swapped [patch].
 159 ==> 375424 - Thumbnails are not being removed from AlbumsView after moving the images to Trash.
-160 ==> 
+160 ==> 368796 - Problem with Exif-tags: ImageDescription and UserComment.
+161 ==> 
